--- a/pc_shop/templates/base.html
+++ b/pc_shop/templates/base.html
@@ -137,7 +137,9 @@
 
 <!-- Скрипты -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="{% static 'js/utils.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/cart.js' %}"></script>
 {% block scripts %}{% endblock %}
 </body>
 </html>
